--- a/index.html
+++ b/index.html
@@ -21,13 +21,12 @@
         <div class="main-content">
             <div id="book-tabal" class="book-tabal">
                 <div class="book-list-h">
-                    <div>id</div>
+                    <div>ID</div>
                     <div>Title <button onclick="sortTitle()" id="sortTitle">▲</button></div>
                     <div>Price: <button onclick="sortPrice()" id="sortPrice">▲</button></div>
                     <div>Read</div>
                     <div>Update</div>
                     <div>Delete</div>
-                    
                 </div>
                 <div id="book-list" class="book-list-t"></div>
 
